2008-04-11 19:56  dezperado

	* : Unrolled the magnifying loop in op_resize_work : now we magnify
	  50% and more faster.

2008-04-08 14:20  dezperado

	* : Adapted the code to tun on a gentoo Linux powerpc machine.
	  Fixed a bug using getopt_long causing segmentation fault there in
	  fim.cpp.
	  Added a new example script : scripts/utilities/fimscan.sh
	  Updated a little the documentation regarding external scripting
	  (like fimscan.sh).

2008-03-25 18:08  dezperado

	* : Some less extern references.
	  Improved a little the image magnification code: better for big
	  magnifications.

2008-03-22 16:04  dezperado

	* : Implemented the -i option to read an image file via standard
	  input.
	  Implemented the -p option to read a fim script via standard
	  input.
	  The option can be turned off by means of the FIM_READ_STDIN_IMAGE
	  symbol.
	  Fixed a little the -f option.
	  Documented the changes in the fim man page and updated the
	  configure script.
	  Added an EXAMPLES section to the man page.

2008-03-17 15:36  dezperado

	* : Enhanced the new textual console.
	  Fixed compilation problems under missing FIM_WINDOWS.
	  Fixed a bug in trec() in common.cpp.
	  Added some new temporary aliases for handling the new console.
	  Added some new global variables for handling the new console.
	  Renamed some options in configure.ac.

2008-03-13 18:07  dezperado

	* : A new debug (textual) console is under building.
	  This one will bring scroll functionalities and much more.

2008-02-20 17:50  dezperado

	* : This is a release candidate for 0.2.
	  Minimal language def changes. The substantial ones will come in a
	  future release.
	  ChangeLog is now prettier, thanks to _ale.
	  Makefile.am freshmeat stuff updated.

2008-02-19 18:11  dezperado

	* : Broke down a little more and commented the language grammar.

2008-02-19 17:13  dezperado

	* : Worked on cleaning up the parser.
	  Fixed a little mixed type operators (float - integer - int).